# ML_Template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: config.yaml
configs/experiment/: debug.yaml  full_train.yaml
configs/model/: classifier.yaml
configs/trainer/: ddp.yaml  deepspeed.yaml  default.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/source/: conf.py  configuration.md  distributed.md  export.md  index.rst  installation.md  quickstart.md  training.md
docs/source/api/: modules.rst
scripts/slurm/: distributed.sbatch  sweep.sbatch  train.sbatch
src/ml_template/: __init__.py  export.py  train.py
src/ml_template/callbacks/: __init__.py  onnx_export.py
src/ml_template/models/: __init__.py  base.py  classifier.py
src/ml_template/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_data.py  test_export.py  test_models.py
